<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostRegistration">

    <TextView
        android:id="@+id/postRegistrationInfoLabel"
        android:layout_width="211dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/post_registration_main_info_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postRegistrationIdLabel"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/post_registration_id_info_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/postRegistrationInfoLabel"
        app:layout_constraintTop_toBottomOf="@+id/postRegistrationInfoLabel"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postRegistrationLabelDataId"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/postRegistrationInfoLabel"
        app:layout_constraintTop_toBottomOf="@+id/postRegistrationIdLabel"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postRegistrationUserTagLabel"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/post_registration_userTag_info_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/postRegistrationInfoLabel"
        app:layout_constraintTop_toBottomOf="@+id/postRegistrationLabelDataId"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/postRegistrationLabelDataTag"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/postRegistrationInfoLabel"
        app:layout_constraintTop_toBottomOf="@+id/postRegistrationUserTagLabel"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/postRegistrationContinueButton"
        android:layout_width="209dp"
        android:layout_height="88dp"
        android:layout_marginTop="10dp"
        android:text="@string/post_registration_button_continue"
        app:layout_constraintStart_toStartOf="@+id/postRegistrationLabelDataTag"
        app:layout_constraintTop_toBottomOf="@+id/postRegistrationLabelDataTag" />


</androidx.constraintlayout.widget.ConstraintLayout>